--- a/24WSA024_JNB_Arduino_Coursework_Final_2025S2(V1)_(2).ipynb
+++ b/24WSA024_JNB_Arduino_Coursework_Final_2025S2(V1)_(2).ipynb
@@ -1061,15 +1061,12 @@
         "# The title is already provided\n",
         "\n",
         "'''\n",
-        "Explanation for Task 3.5\n",
-        "\n",
-        "The code from tasks 3.1 to 3.4 already send the CSV data to the serial monitor.\n",
-        "So we just need to save this outputted data to the file called threeminstemperature_F422019.csv\n",
-        "The code already prints the data in the desired format because of the code line 'Serial.println(\"Time,Temperature,Frequency,Magnitude\");'\n",
-        "This means there isnt any need to change the code and we jsut need to let the code run for 3 minutes to collect the temperature data.\n",
-        "Then we can simply copy and paste all of the data from the serial monitor and paste it into a notepad and save the file as threeminstemperature_F422019.csv.\n",
-        "\n",
-        "\n",
+        "Explanaion for 3.5\n",
+        "The code above carries out most of this task. To get it to print the values into excel you need to open 'files' in the top left and\n",
+        "go down to the bottom left and hit 'options'. Then hit 'add-ins' on the tab that opens on the screen. Then go to the bottom where it says 'manage : excel add-ins'\n",
+        "and change it to 'COM add-ins' and hit 'Go'. A new menu will show and you need to tick the box that says 'Microsoft Data Streamer for Excel' then hit 'ok'.\n",
+        "Then it should show 'Data Streamer' along the top and just hit the 'connect a device' and ensure it is connected to the Arduino Nano.\n",
+        "To finish you ned to close the serial monitor in arduino ide and then go back to excel and hit 'Start Data and it will print all the data.\n",
         "'''\n",
         "\n",
         "\n",
