--- a/24WSA024_JNB_Arduino_Coursework_Final_2025S2(V1)_(2).ipynb
+++ b/24WSA024_JNB_Arduino_Coursework_Final_2025S2(V1)_(2).ipynb
@@ -940,6 +940,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Within the graph showing the temperature change over the time period of 3 minutes the temperature had a peak of 19.98 and a minimum of 19.88. This means there was only a variation of 0.1 degrees. This is due to the fact it is room temperature and the temperature will not change much over the course of 3 minutes. The temperature did decrease over the time period as it began at 19.98 and towards the end of the 3 minutes it reached its lowest point of 19.88. There were points where the temperature would go up for a second but this is likely due to the temperature sensor as it is such a small change by increasing by 0.01 degrees.\n",
+        "The graph showing magnitude against the frequency started at a large magnitude over 3500 when the frequency was. The magnitude rapidly dropped where it remained for the rest of the graph as the line remains flat. The magnitude did change but by very small amounts and the graph does not show this as the changes are so small."
+      ],
+      "metadata": {
+        "id": "WCZFDGLxXP5M"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@title Answer Tasks 3.1 to 3.4 Arduino Code\n",
@@ -1120,7 +1130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "BIe8JmUJJpxM",
         "colab": {
